# note_container

./: README.md  main.py  setup.cfg
note_container/: container.py  exceptions.py  note.py  test_container.py  uniqueize.py  utils.py  zip_man.py
