[metadata]
name = note_container
version = 0.2
description = Archive Container Store Text & Sections.
long_description = file: README.md
url = https://github.com/Class-Tooraj/note_container
author = ToorajJahangiri
author_email = Toorajjahangiri@gmail.com
classifiers =
    Programming Language :: Python :: 3.10

[options]
scripts = ./main.py
packages = find:

[options.packages.find]
exclude =
    test*
    testing*